sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value ecart
	ecart=getNombreValeurs()
        ^AlgCombSort:4: error: not found: value nb
	nb=getNombreValeurs()
        ^AlgCombSort:5: error: not found: value y
	y=1
        ^AlgCombSort:8: error: not found: value y
		y=0
                ^AlgCombSort:9: error: not found: value ecart
		if (ecart>1){
                    ^AlgCombSort:10: error: not found: value ecart
			ecart=ecart/3
                        ^AlgCombSort:12: error: not found: value i
		i=0
                ^AlgCombSort:13: error: not found: value i
		while(i+ecart<nb){
                      ^AlgCombSort:14: error: not found: value i
			if(getValeur(i)>getValeur(i+ecart)){
                                     ^AlgCombSort:15: error: not found: value i
				echange(i,i+ecart)
                                        ^AlgCombSort:16: error: not found: value y
				y=y+1
                                ^AlgCombSort:18: error: not found: value i
			i=i+1
                        ^AlgCombSort:20: error: not found: value y
	}while(y!=0 || ecart>1)
               ^