sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
	ecart=getNombreValeurs()
	nb=getNombreValeurs()
	y=1
	
	do{
		y=0
		if (ecart>1){
			ecart=ecart/3
		}
		i=0
		while(i+ecart<nb){
			if(getValeur(i)>getValeur(i+ecart)){
				echange(i,i+ecart)
				y=y+1
			}
			i=i+1
		}
	}while(y!=0 || ecart>1)

}
